<resources>
    <string name="app_name">Event Manager</string>
    <string name="login">Login</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="verify">Verify</string>
    <string name="enter_verification_code">Enter veridication code</string>
    <string name="enter_vaild_phone">Enter a valid phone</string>
    <string name="wait">Wait..</string>
    <string name="verification_code_sending">Please wait ,Verification code sending to your phone...</string>
    <string name="enter_name">Enter Name</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="enter_vaild_name">Enter valid name</string>
    <string name="welcome_user">Welcome back  %1$s</string>
    <string name="profile">Profile</string>
    <string name="skip" >Skip</string>
    <string name="preference_is_logged_in_key">is_looged_in</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="updating">Updating...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_my_events">My Events</string>
    <string name="menu_today_events">Today\'s Events</string>
    <string name="menu_upcoming_events">Upcoming Events</string>
</resources>
